--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -116,7 +116,7 @@ a:hover {
 }
 
 a.turquoise {
-	color: #00c9db;
+	color: #80BA3B
 }
 
 a.white {
@@ -1340,7 +1340,7 @@ input[type='checkbox'] {
 }
 
 .footer .list-unstyled .fas {
-	color: #00c9db;
+	color: #80BA3B;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1370,7 +1370,7 @@ input[type='checkbox'] {
 }
 
 .footer .fa-stack:hover .fa-stack-2x {
-    color: #00c9db;
+    color: #80BA3B;
 }
 
 
@@ -1402,13 +1402,13 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #00c9db url("../images/up-arrow.png") no-repeat center 47%;
+	background: #80BA3B url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
 
 a:hover.back-to-top {
-	background-color: #36edfd; 
+	background-color: #80BA3B; 
 }
 
 
